--- a/frontend/styles/vueHdvChangerEntrepot.css
+++ b/frontend/styles/vueHdvChangerEntrepot.css
@@ -1,26 +1,34 @@
 #vueHdvChangerEntrepot{
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     flex-wrap: nowrap;
+
 }
 
 
-#ressourcesEtQuantites {
+#ressourcesEtQuantitesHdv,
+#ressourcesEtQuantitesEntrepot {
     display: flex;
     flex-direction: row;
     flex-wrap:nowrap;
+    justify-content: space-between;
 
     width: 90%;
     border-radius: 16px;
     background-color: #393c3fb2;
-    margin: 1% 0;
-    
+    margin: 1%;
+
+    padding: 5px;
+    height: 50px;
+
+    margin-bottom: 20px;
 }
 
-#ressourcesTransfert {
-    margin: 0 5px;
-    width: 100%;
-    height: 100%;
+#ressourcesTransfertHdv,#quantiteTransfertHdv,
+#ressourcesTransfertEntrepot,#quantiteTransfertEntrepot {
+    margin:  5px;
+    width: 50%;
+    height: 80%;
     border-radius: 16px;
     background-color: #393c3f;
     color: wheat;
@@ -30,4 +38,54 @@
     outline: none;
     box-sizing: border-box;
     font-weight: bold;
+}
+
+.titreTransfert{
+    font-size: x-large;
+    margin-bottom: -15px ;
+    z-index: 4 ;
+
+}
+
+#changerEntrepot{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+
+#entrepotDepart,#entrepotArrive{
+    display: flex;
+    flex-direction: column;
+}
+
+#entrepotDepartSelect,#entrepotArriveSelect{
+    background-color: #393c3fb2;
+    border-radius: 16px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 15px;
+}
+
+#bouttonEnvoyerTransfert{
+    border-radius: 16px;
+    background-color: #393c3f;
+    color: wheat;
+    padding: 10px;
+    z-index: 1;
+    border: none;
+    outline: none;
+    box-sizing: border-box;
+    font-weight: bold;
+
+    margin: 5%;
+
+    width: 30%;
+}
+
+#containerEnvoyerTransfert{
+    display: flex;
+    flex-direction: row-reverse;
 }
