--- a/frontend/styles/vueHdvChangerEntrepot.css
+++ b/frontend/styles/vueHdvChangerEntrepot.css
@@ -89,3 +89,8 @@
     display: flex;
     flex-direction: row-reverse;
 }
+
+#bouttonEnvoyerTransfert:hover {
+    cursor: pointer;
+    background-color: rgb(23, 23, 23);
+}
