--- a/frontend/vues.css
+++ b/frontend/vues.css
@@ -464,4 +464,79 @@
     width: auto;
 }
 
+/*VUE CHOIXDIEU*/
+
+#vueChoixDieu {
+    color: wheat;
+    background-color: #000000;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    height: 20%;
+    width: 35%;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 4;
+    border: 4px double #212529;
+    border-radius: 24px;
+    overflow: hidden;
+}
+
+.CDContainer {
+    display: flex;
+    justify-content: center;
+    height: 80%;
+    width: 90%;
+    border-radius: 16px;
+    background-color: #393c3fb2;
+    margin: 5%;
+    overflow: hidden;
+}
+
+.CDContainer img {
+    margin-top: 0.8%;
+    filter: grayscale(100%);
+    transition: 0.3s;
+}
+
+.CDContainer img:hover {
+    filter: grayscale(0%);
+    transform: scale(1.1);
+}
+
+.HdvEnvoyerContainer img {
+    filter: none;
+    transform: none;
+    transition: none;
+}
+
+.HdvEnvoyerContainer img:hover {
+    filter: none;
+    transform: none;
+}
+
+.CDContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+
+
+.CDContainerTitre {
+    display: flex;
+    align-items: center;
+    height: 20%;
+    width: 100%;
+    font-size: 20px;
+    font-weight: bold;
+    position: absolute;
+    top: 1.2%;
+    left: 55%;
+    transform: translateX(-50%);
+    color: rgb(152, 129, 88);
+}
 
