--- a/frontend/vues.css
+++ b/frontend/vues.css
@@ -466,7 +466,7 @@
 
 /*VUE CHOIXDIEU*/
 
-#vueChoixDieu {
+#vueChoixDieu, #vueChoixCite {
     color: wheat;
     background-color: #000000;
     display: flex;
@@ -540,3 +540,48 @@
     color: rgb(152, 129, 88);
 }
 
+/*VUE DIALOGUE*/
+
+.DialogueContainer {
+    position: fixed;
+    left: 0%;
+    bottom: 0%;
+    height: 20%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.750);
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    z-index: 5;
+}
+
+.DialogueContainer img {
+    height: 750px;
+}
+
+.DialogueContainerTexte {
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    height: 80%;
+    width: 90%;
+    border-radius: 16px;
+    margin-right: 5%;
+    overflow: hidden;
+    color: wheat;
+    padding-left: 5%; /* Adjust padding as needed */
+}
+
+.DialogueContainerTexte p {
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+    font-weight: bold;
+    color: wheat;
+}
+
+.DialogueContainerTitre p{
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(152, 129, 88);
+}
