--- a/frontend/style.css
+++ b/frontend/style.css
@@ -5,6 +5,19 @@ body {
     height: 100vh;
 }
 
+.inputDA {
+    margin:0 5px;
+    border-radius:16px;
+    background-color: #393c3f;
+    color: wheat;
+    padding:10px;
+    z-index: 1;
+    border:none;
+    outline:none;
+    box-sizing: border-box;
+    font-weight: bold;
+}
+
 /*----------Boutons----------*/
 
 .buttonretro {
@@ -155,10 +168,9 @@ body {
     top: 0;
     width: 100%;
     height: 5%;
-    background-color: #000;
+    background-color: rgb(23, 23, 23);
     z-index: 1;
     color: wheat;
-    padding: 0 40px;
     box-sizing: border-box;
 }
 
@@ -166,6 +178,7 @@ body {
     display: flex;
     gap: 10px;
     margin-right: auto;
+    margin-left: 2%;
 }
 
 .ressources img {
@@ -174,9 +187,36 @@ body {
     vertical-align: middle;
 }
 
-#nomPartie {
-    font-size: xx-large;
+#nomPartie, #nomJoueur {
     margin-right: auto;
+    background-color: rgb(31, 30, 30);
+    height: 100%;
+    width: 25%;
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.boutonHaut1, .boutonHaut2{
+    background-color: rgb(31, 30, 30);
+    width: 8%;
+    height: 100%;
+    display : flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.boutonHaut2{
+    background-color: rgb(23, 23, 23);
+}
+
+.boutonHaut1:hover, .boutonHaut2:hover {
+    background-color: #393c3f;
 }
 
 /*----------Vues prev et partie----------*/
@@ -383,10 +423,6 @@ body {
     font-weight: bold;
 }
 
-#usernameInput {
-    max-width: 10%;
-}
-
 .inputblack {
     margin: 30px;
     background: #262525;
@@ -421,7 +457,7 @@ body {
     flex-direction: row;
 }
 
-.gauche{
+.gauche {
     display: flex;
     flex-direction: column;
     background-color: #000;
@@ -432,23 +468,24 @@ body {
     border-start-start-radius: 25%;
 }
 
-.gauche img{
+.gauche img {
     width: 75px;
     height: 75px;
     margin: 5px;
 }
 
-.gauche img:hover{
+.gauche img:hover {
     cursor: pointer;
     transform: scale(1.1);
 }
-.gauche img:active{
+
+.gauche img:active {
     transform: scale(0.9);
 }
 
 /* Tutoriel */
 
-#tuto{
+#tuto {
     display: flex;
 }
 
@@ -470,8 +507,8 @@ body {
 
 .contenuTutoContainer {
     display: flex;
-    flex-direction: column; 
-    align-items: center; 
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     height: 100%;
     width: 60%;
@@ -502,7 +539,7 @@ body {
     color: rgb(152, 129, 88);
 }
 
-.contenuTutoTexte{
+.contenuTutoTexte {
     margin: 15px;
 }
 
@@ -515,7 +552,8 @@ body {
     overflow: auto;
 }
 
-.titreTuto1, .titreTuto2{
+.titreTuto1,
+.titreTuto2 {
     display: flex;
     align-items: center;
     height: 13%;
@@ -523,10 +561,11 @@ body {
     gap: 50px;
 }
 
-.titreTuto1{
+.titreTuto1 {
     background-color: rgb(23, 23, 23);
 }
-.titreTuto2{
+
+.titreTuto2 {
     background-color: rgb(31, 30, 30);
 }
 
@@ -536,14 +575,14 @@ body {
     cursor: pointer;
 }
 
-.titreTutoImage img{
+.titreTutoImage img {
     height: 100%;
     width: 75px;
     margin-left: 10px;
 }
 
 
-#nbBateaux{
+#nbBateaux {
     background-color: #393c3fb2;
     border-radius: 16px;
     display: flex;
@@ -555,12 +594,12 @@ body {
 
 }
 
-#titreNbBateaux{
+#titreNbBateaux {
     margin-bottom: -10px;
     font-size: x-large;
 }
 
-#boutonCreerBateau{
+#boutonCreerBateau {
     border-radius: 16px;
     background-color: #393c3f;
     color: wheat;
@@ -577,19 +616,19 @@ body {
     cursor: pointer;
 }
 
-#entrepotArriveSelectEntrepot{
+#entrepotArriveSelectEntrepot {
     background-color: #393c3fb2;
     border-radius: 16px;
     padding: 15px;
     width: 70%;
 }
 
-#containerBoutonTEntre{
+#containerBoutonTEntre {
     display: flex;
-    flex-direction: row-reverse ;
+    flex-direction: row-reverse;
 }
 
-#boutonEnvoyerTransfertEntrepot{
+#boutonEnvoyerTransfertEntrepot {
     border-radius: 16px;
     background-color: #393c3f;
     color: wheat;
@@ -602,12 +641,13 @@ body {
     margin: 5%;
     width: 30%;
 }
-#boutonEnvoyerTransfertEntrepot:hover{
+
+#boutonEnvoyerTransfertEntrepot:hover {
     cursor: pointer;
     background-color: rgb(23, 23, 23);
 }
 
-#entrepotArriveSelectEntrepot{
+#entrepotArriveSelectEntrepot {
     background-color: #393c3fb2;
     border-radius: 16px;
     padding: 10px;
