--- a/frontend/vues.css
+++ b/frontend/vues.css
@@ -552,3 +552,66 @@
     font-weight: bold;
     color: rgb(152, 129, 88);
 }
+
+/*VUE BATIMENTS*/
+
+#vueBatiments {
+    color: wheat;
+    background-color: #000000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 20%;
+    width: 20%;
+    position: fixed;
+    left: 1%;
+    top: 6%;
+    border: 4px double #212529;
+    border-radius: 24px;
+    overflow: hidden;
+}
+
+#vueBatiments img {
+    cursor: pointer;
+    margin-top: 30px;
+    height: 92px;
+    width: 75px;
+}
+
+.BatimentsContainer {
+    display: flex;
+    height: 80%;
+    width: 90%;
+    border-radius: 16px;
+    background-color: #393c3fb2;
+    overflow: auto;
+    gap: 3%;
+}
+
+.BatimentsContainerTitre {
+    display: flex;
+    align-items: center;
+    height: 20%;
+    width: 100%;
+    font-size: 20px;
+    font-weight: bold;
+    position: absolute;
+    top: 1.2%;
+    left: 55%;
+    transform: translateX(-50%);
+    color: rgb(152, 129, 88);
+}
+
+.BatimentsContainer img {
+    filter: grayscale(100%);
+    transition: 0.3s;
+}
+
+.BatimentsContainer img:hover {
+    filter: grayscale(0%);
+    transform: scale(1.1);
+}
+
+.BatimentsContainer img:active {
+    transform: scale(0.9);
+}
