--- a/frontend/vues.css
+++ b/frontend/vues.css
@@ -536,7 +536,7 @@
     margin-right: 5%;
     overflow: hidden;
     color: wheat;
-    padding-left: 5%; /* Adjust padding as needed */
+    padding-left: 5%;
 }
 
 .DialogueContainerTexte p {
@@ -551,6 +551,12 @@
     font-size: 20px;
     font-weight: bold;
     color: rgb(152, 129, 88);
+}
+
+#vueDialogue {
+    display: none;
+    position: absolute;
+    z-index: 10000;
 }
 
 /*VUE BATIMENTS*/
@@ -614,4 +620,69 @@
 
 .BatimentsContainer img:active {
     transform: scale(0.9);
+}
+
+/*VUE STATSUNITE*/
+
+#statsUnite {
+    color: wheat;
+    background-color: #000000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 53%;
+    width: 20%;
+    position: fixed;
+    left: 1%;
+    top: 28%;
+    border: 4px double #212529;
+    border-radius: 24px;
+    overflow: hidden;
+}
+
+.unitStatsContainer {
+    display: flex;
+    height: 80%;
+    width: 90%;
+    border-radius: 16px;
+    background-color: #393c3fb2;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+}
+
+.unitStatsContainerTitre {
+    display: flex;
+    align-items: center;
+    height: 20%;
+    width: 100%;
+    font-size: 20px;
+    font-weight: bold;
+    position: absolute;
+    top: 0.5%;
+    left: 55%;
+    transform: translateX(-50%);
+    color: rgb(152, 129, 88);
+}
+
+#unitStats {
+    overflow-x: auto;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    /* font-weight: bold; */
+    color: wheat;
+    padding: 5%;
+    margin-top: 10%;
+}
+
+#unitStats p {
+    width: 100%;
+    margin: 0px;
+}
+
+#uniteSelectMode, #uniteModeButton{
+    margin: 0px;
+    margin-right: 5px;
 }
