--- a/frontend/style.css
+++ b/frontend/style.css
@@ -235,6 +235,10 @@ body {
     transform: scale(0.9);
 }
 
+.boutonHaut3 {
+    width: 15%;
+}
+
 
 /*----------Vues prev et partie----------*/
 
@@ -423,7 +427,6 @@ body {
     z-index: 4;
     border: 4px double #212529;
     overflow: auto;
-    transition: 0.25s all, 0.1s background-position;
     border-radius: 24px;
 }
 
@@ -481,6 +484,7 @@ body {
     height: 13%;
     width: 100%;
     gap: 50px;
+    font-weight: bold;
 }
 
 .titreTuto1 {
